Updated ticker style to prevent flicker when message is cycled when the ticker is expanded

--- a/public/css/site.styl
+++ b/public/css/site.styl
@@ -59,7 +59,7 @@ body
         span
           float left
           margin-right 4px
-          
+
 .navbar a
   -webkit-transition all 200ms ease-out
   transition all 200ms ease-out
@@ -239,6 +239,8 @@ footer
       margin-left 0
       margin-right 0
   #ticker.on
+    margin-top 0
+    opacity 1
     -webkit-transition none
     transition none
   .expanded-footer
